--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "leaflet": "^1.9.4",
+  "react-leaflet": "^4.2.1"
+}
+"
   },
   "scripts": {
     "start": "react-scripts start",
