--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "trail-stay-app",
-  "version": "0.1.0",
+  "name": "trail-stay-leaflet",
+  "version": "1.0.0",
   "private": true,
-  "dependencies": {
-  "react": "^18.2.0",
-  "react-dom": "^18.2.0",
-  "leaflet": "^1.9.4",
-  "react-leaflet": "^4.2.1"
-}
-"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "leaflet": "^1.9.4",
+    "react-leaflet": "^4.2.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.4",
+    "vite": "^4.0.0"
   }
 }
+
 
