--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "trail-stay-leaflet",
+  "name": "trail-stay-app",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -14,11 +13,13 @@
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.4",
-    "vite": "^4.0.0"
+    "@vitejs/plugin-react": "^4.1.0",
+    "vite": "^4.5.0",
+    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.16"
   }
 }
+
 
 
